# raytracer-tutorial

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain
.github/workflows/: cargo.yml
data/: scene_10.json  scene_10.yaml  scene_200_no_bvh.json  scene_200_no_bvh.yaml  scene_500.json  scene_500.yaml
raytracer/: Cargo.toml
raytracer/src/: main.rs  material.rs  scene.rs  vec3.rs
raytracer_codegen/: Cargo.toml
raytracer_codegen/src/: lib.rs
